--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -30,8 +30,7 @@
 <body class="base-body">
     <!--HEADER-->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable navbar-light base-nav
-            border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable  base-nav box-shadow mb-3">
             <div>
                 <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd_smal_without_bg.png' %}" width="43" height="38" class="imglogo"/></a>
 
@@ -93,3 +92,6 @@
 </body>
 
 </html>
+
+
+
