--- a/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
+++ b/HospitalizacionDomiciliaria/reportes/templates/reportes/reportes.html
@@ -3,76 +3,52 @@
 {% block content %}
 
 
-<!--    Codigo en Progreso   -->
+<!--   Codigo en Progreso   -->
 
 
 
-<br><br>
-<div class="row">
+<div id="list-div" class="limiter"> <!-- width 100%   margin 0 auto   -->
+    <div class="box-position">
+        <div class="box-parameters">
+            <br>
+            <h2 class="text-centered">Selección de Paciente</h2>
+            <br>
+            <input type="text" id="myInput" onkeyup="searchInList()" placeholder="Buscar un nombre..." title="Type in a name">
 
-  <!--Columna Izquierda-->
-  <div class="col-4">
-    <div class="list-group" id="list-tab" role="tablist">
-      <!--
-        Lista generada en js dinamicamente
-      -->
+            <ul id="myUL">
+                <!--   Lista de pacientes generada dinamicamente con js   -->
+            </ul>
+            <br>
+
+        </div>
     </div>
-  </div>
-
-  <!--Columna Derecha-->
-  <div class="col-8">
-    <div class="tab-content" id="nav-tabContent">
-      <!--Cuadro de Texto-->
-      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
-      </div>
-      <!--Boton Guardar Reporte-->
-      <div id="boton-report">
-
-        <div style="margin:2px"><a class="list-group-item list-group-item-action active" id="save-report" onclick=saveReport() data-toggle="list" href="#list-home" role="tab" aria-controls="home">Guardar Reporte</a></div>
-
-      </div>
-      <br>
-      <!--Info General-->
-      <div class="card-group">
-        <div class="card bg-light mb-3">
-          <div class="card-header">Nombre</div>
-          <div class="card-body">
-            <h5 id="cardName" class="card-title"></h5>
-            <p class="card-text">dirección x comuna san bernardo.</p>
-          </div>
-        </div>
-        <div class="card bg-light mb-3">
-          <div class="card-header">Caracteristica principal</div>
-          <div class="card-body">
-            <h5 id="cardCaract" class="card-title"></h5>
-            <p class="card-text"></p>
-          </div>
-        </div>
-        <div class="card bg-light mb-3">
-          <div class="card-header">Edad</div>
-          <div class="card-body">
-            <h5 id="cardEdad" class="card-title"></h5>
-            <p class="card-text"></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
 
-
-
-
+<div id="form-div" class="limiter">
+    <div class="box-position">
+        <div class="box-parameters">
+            <br>
+            <h2 class="text-centered">Agregar reporte</h2>
+            <br>
+            <textarea class="form-control" id="report-form" rows="3"></textarea>
+            <br>
+            <button type="button" class="btn save-button btn-block" onclick=saveReport()>Guardar Reporte</button> 
+            <br>
+            <br>
+            <button type="button" class="btn btn-link" onclick="changeDiv()">Volver a la selección de paciente.</button>
+        </div>
+    </div>
+</div>
 
 <script>
-  var listtext = "boton lista paciente";
-  var savetext = "boton guarder reporte";
-  var idArray = [];
-  numId = 0;
-  var obj = {property1: ''};
-  var paciente = "paciente";
-  var listapacientes = [
+    /* Variables */
+    var listtext = "boton lista paciente";
+    var savetext = "boton guarder reporte";
+    var idArray = [];
+    numId = 0;
+    var obj = {property1: ''};
+    var paciente = "paciente";
+    var listapacientes = [
     {
       name: 'Paciente 1',
       caracteristica_principal: 'Enfermedad cardiaca',
@@ -82,7 +58,6 @@
       name: 'Paciente 2',
       caracteristica_principal: 'Diabetes',
       edad: 60
-
     },
     {
       name: 'Paciente 3',
@@ -105,34 +80,67 @@
       edad: 65
     }
   ];
-
-
-  window.onload=inicio();
-  /*Carga los botones*/
-  function inicio(){
-    for(var i=0 ; i < listapacientes.length ; i++){
-      paciente = listapacientes[i]["name"]
-      listtext = `<div style="margin:2px"><a class="list-group-item list-group-item-action active" id="list-home-list${i}" onclick=infobox(id) data-toggle="list" href="#list-home" role="tab" aria-controls="home">${paciente}</a></div>`;
-      //idArray[i] = "list-home-list"+i;
-      document.getElementById("list-tab").innerHTML+=listtext;
+    window.onload=inicio();
+    /* Carga los botones */
+    function inicio(){
+        hideDiv();
+        for(var i=0 ; i < listapacientes.length ; i++){
+            paciente = listapacientes[i]["name"]
+            listtext = `
+            <li id="list-home-list${i}"  onclick=infobox(id)>
+                <a class="text-centered">${paciente}</a>
+            </li>
+            `;
+            document.getElementById("myUL").innerHTML+=listtext;
+        }
     }
-    //savetext = ``  
-    //document.getElementById("boton-report").innerHTML+=savetext;
-  }
-
-
-  /*Función llamada al hacer click en un paciente*/
-  function infobox(id){
-    numId = Number(id.substr(14));
-    document.getElementById("cardName").innerHTML=`${listapacientes[numId]["name"]}`;
-    document.getElementById("cardCaract").innerHTML=`${listapacientes[numId]["caracteristica_principal"]}`;
-    document.getElementById("cardEdad").innerHTML=`${listapacientes[numId]["edad"]}`;
-  }
-function saveReport(id){
-    alert("reporte de paciente  " + listapacientes[numId]["name"] + " guardado (habilitado cuando se construya base de datos)");
-}
-
+    /* Función llamada al hacer click en un paciente */
+    function infobox(id){
+        numId = Number(id.substr(14));
+        /*document.getElementById("cardName").innerHTML=`${listapacientes[numId]["name"]}`;
+        document.getElementById("cardCaract").innerHTML=`${listapacientes[numId]["caracteristica_principal"]}`;
+        document.getElementById("cardEdad").innerHTML=`${listapacientes[numId]["edad"]}`;*/
+        changeDiv();
+    }
+    /* Función que guarda el reporte, por ahora solo muestra un ménsaje */
+    function saveReport(id){
+        alert("reporte de paciente  " + listapacientes[numId]["name"] + " guardado (habilitado cuando se construya base de datos)");
+        document.getElementById('report-form').value = "";
+    }
+    /* Buscador */
+    function searchInList() {
+        var input, filter, ul, li, a, i, txtValue;
+        input = document.getElementById("myInput");
+        filter = input.value.toUpperCase();
+        ul = document.getElementById("myUL");
+        li = ul.getElementsByTagName("li");
+        for (i = 0; i < li.length; i++) {
+            a = li[i].getElementsByTagName("a")[0];
+            txtValue = a.textContent || a.innerText;
+            if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                li[i].style.display = "";
+            } else {
+                li[i].style.display = "none";
+            }
+        }
+    }
+    /* Permite tener dos Divs en el mismo lugar, pero no al mismo tiempo */
+    function changeDiv() {
+        var x = document.getElementById("list-div");
+        var y = document.getElementById("form-div");
+        if (x.style.display === "none") {
+            x.style.display = "block";
+            y.style.display = "none";
+        } else {
+            x.style.display = "none";
+            y.style.display = "block";
+        }
+    }
+    /* Al cargar la página se oculta el Div que muestra el formulario del reporte */
+    function hideDiv() {
+        var y = document.getElementById("form-div");
+        y.style.display = "none";
+    }
 </script>
 
 {% endblock %}
-
