--- a/HospitalizacionDomiciliaria/core/templates/core/base.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/base.html
@@ -14,16 +14,25 @@
     <script src="{% static 'core/js/jquery-3.4.1.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'core/js/bootstrap.bundle.js' %}" type="text/javascript"></script>
 
+
+
+
+    <!--===============================================================================================-->
+    <link rel="stylesheet" type="text/css" href="{% static 'registration/css/util.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'registration/css/main.css' %}">
+    <!--===============================================================================================-->
+
+
+
 </head>
 
 
-<body>
+<body class="base-body">
     <!--HEADER-->
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable navbar-light bg-white
-            border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable  base-nav box-shadow mb-3">
             <div>
-                <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd.png' %}" class="imglogo"/></a>
+                <a class="navbar-brand" href="{% url 'home' %}" > <img src="{% static 'core/img/uhd_smal_without_bg.png' %}" width="43" height="38" class="imglogo"/></a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,36 +44,36 @@
                 <ul class="navbar-nav flex-grow-1">
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'logout' %}">Logout</a>
+                        <a class="nav-link text-light" href="{% url 'logout' %}">Logout</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'login' %}">Login</a>
+                        <a class="nav-link text-light" href="{% url 'login' %}">Login</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'usuarios' %}">Usuarios</a>
+                        <a class="nav-link text-light" href="{% url 'usuarios' %}">Usuarios</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark">Perfil</a>
+                        <a class="nav-link text-light">Perfil</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'rutas' %}">Ruta</a>
+                        <a class="nav-link text-light" href="{% url 'rutas' %}">Ruta</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'reportes' %}">Reportes</a>
+                        <a class="nav-link text-light" href="{% url 'reportes' %}">Reportes</a>
                     </li>
                     {% endif %}
                     {% if request.user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="{% url 'visitaPacientes' %}">Visita Pacientes</a>
+                        <a class="nav-link text-light" href="{% url 'visitaPacientes' %}">Visita Pacientes</a>
                     </li>
                     {% endif %}
                 </ul>
