--- a/HospitalizacionDomiciliaria/registration/templates/registration/login.html
+++ b/HospitalizacionDomiciliaria/registration/templates/registration/login.html
@@ -44,12 +44,12 @@
 
 						<p>
 						<input type="text" name="username" autofocus maxlength="254" required
-						  id="id_username" class="form-control" placeholder="Nombre de usuario"/>
+						  id="Username" class="form-control" placeholder="Nombre de usuario"/>
 					  </p>
 
 					  <p>
 						<input type="password" name="password" required
-						  id="id_password" class="form-control" placeholder="Contraseña"/>
+						  id="Password" class="form-control" placeholder="Contraseña"/>
 					  </p>
 
 					  <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
