se puede registrar datos personales y usuarios

--- a/HospitalizacionDomiciliaria/registration/templates/registration/usuarios.html
+++ b/HospitalizacionDomiciliaria/registration/templates/registration/usuarios.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <ul class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'registroFuncionario' %}">Registro Funcionario</a>
-        <a class="nav-link text-dark" href="{% url 'registroPaciente' %}">Registro Paciente</a>
+        <a class="nav-link text-dark" href="{% url 'registroDatosPersonales' %}">Registro Datos Personales</a>
+        <a class="nav-link text-dark" href="{% url 'registroUsuario' %}">Registro Usuario</a>
 </ul>
 {% endblock %}
