Visusal changes and VisitaPaciente Query attempt

--- a/HospitalizacionDomiciliaria/core/templates/core/home.html
+++ b/HospitalizacionDomiciliaria/core/templates/core/home.html
@@ -1,5 +1,22 @@
 {% extends 'core/base.html' %}
 
 {% block content %}
-<h1>Cuidamos a nuestros pacientes</h1>
+
+<body>
+    <div id="outPopUp">
+        <h1>Hospitalización Domiciliaria Hospital El Pino</h1>
+    </div>
+</body>
+<div id="list-div" class="limiter"> <!-- width 100%   margin 0 auto   -->
+    <div class="box-position">
+            <div class="box-parameters">
+            <br>
+            <h1 style="font-size: 1.5em">Rutas y pacientes para hoy:</h1>
+            
+            <br>
+            <br>
+            </div>
+    </div>
+</div>
+
 {% endblock %}
