--- a/HospitalizacionDomiciliaria/core/static/core/css/style.css
+++ b/HospitalizacionDomiciliaria/core/static/core/css/style.css
@@ -26,6 +26,12 @@ h2 {
 
 }
 
+#outPopUp {
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+  }
+
 .box-position{
     width: 100%;
     min-height: 100vh; 
